--- a/oracle-registry-v2/Cargo.toml
+++ b/oracle-registry-v2/Cargo.toml
@@ -8,20 +8,20 @@ repository = "https://github.com/mdlog/alethea-network"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-linera-sdk = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-async-trait = { workspace = true }
-thiserror = { workspace = true }
-async-graphql = { workspace = true }
-bcs = { workspace = true }
-alethea-oracle-types = { workspace = true }
-futures = "0.3"
-sha2 = "0.10"
+async-graphql.workspace = true
+async-trait.workspace = true
+linera-sdk.workspace = true
+log.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+thiserror.workspace = true
+bcs.workspace = true
+sha2.workspace = true
+alethea-oracle-types.workspace = true
+futures.workspace = true
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
-linera-views = "0.15.5"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
